--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "dotpath lookup module",
   "main": "index.js",
   "scripts": {
-    "lint": "standard index.js test/index.js",
-    "test": "node test/index.js && npm run lint"
+    "test": "jest",
+    "typecheck": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
     "url": "https://github.com/jarofghosts/dotpather/issues"
   },
   "devDependencies": {
-    "standard": "^5.4.1",
-    "tape": "^4.4.0"
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.6.2"
   }
 }
